// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubForm component should render SubForm correctly 1`] = `
<SubForm
  fields={Array []}
  name="cosiName"
  title="cosiTitle"
/>
`;

exports[`SubForm component should render SubForm with description correctly 1`] = `
<SubForm
  description="description here!"
  fields={Array []}
  name="cosiName"
  title="cosiTitle"
/>
`;

exports[`SubForm component should render SubForm without title correctly 1`] = `
<SubForm
  fields={Array []}
  name="cosiName"
/>
`;
